syntax = "proto3";

option csharp_namespace = "HackathonX.Service";

package xgamer;

service XGame {
  rpc GetOrCreateUser(User) returns (User);
  rpc GetQuestionnaire(RecordsToReturn) returns (QuestionnareReply);
  rpc SaveUserScore(UserScore) returns (SaveResult);
  rpc GetLeaderboard(RecordsToReturn) returns (LeaderboardReply);
}

message User {
  string id = 1;
  string name = 2;
}

message SaveResult {
  bool success = 1;
}

message RecordsToReturn {
  int32 records = 1;
}

message QuestionnareReply {
  repeated Question questions = 1;
}

message Question {
  int32 id = 1;
  string text = 2;
  int32 score = 3;
  int64 useranswerid = 4;
  repeated Answer answers = 5;
}

message Answer {
  int64 id = 1;
  int32 questionid = 2;
  string text = 3;
  bool iscorrect = 4;
}

message LeaderboardReply {
  repeated UserScore points = 1;
}

message UserScore {
  int32 rank = 1;
  int32 score = 2;
  int64 time = 3;
  int64 timestamp = 4;
  User user = 5;
}